--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
+    "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.17.1",
     "axios": "^1.2.6",
     "bootstrap": "^5.3.0-alpha1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
