--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-google-maps/api": "^2.17.1",
     "axios": "^1.2.6",
     "bootstrap": "^5.3.0-alpha1",
+    "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
